--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,10 @@
     <string name="password">Password</string>
     <string name="login">Login</string>
     <string name="sign_up">Sign Up</string>
-    <string name="full_name">Fullname</string>
+    <string name="full_name">FullName</string>
     <string name="email">Email</string>
-    <string name="login_here">Already have an acount? <u>Login</u></string>
-    <string name="sign_up_here">Create a new acount? SignUp</string>
+    <string name="login_here">Already have an account? <u>Login</u></string>
+    <string name="sign_up_here">Create a new account? SignUp</string>
     <string name="first_name">First Name</string>
     <string name="last_name">LastName</string>
     <string name="logout">Logout</string>
