--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="logout">Logout</string>
     <string name="select_date">Select birthdate</string>
     <string name="birthday">Birthday</string>
+    <string name="latestPost">Latest post</string>
 </resources>
