worked on: activity_main (IP)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,12 @@
     <string name="login_here">Already have an account? <u>Login</u></string>
     <string name="sign_up_here">Create a new account? SignUp</string>
     <string name="first_name">First Name</string>
-    <string name="last_name">LastName</string>
+    <string name="last_name">Last Name</string>
     <string name="logout">Logout</string>
     <string name="select_date">Select birthdate</string>
     <string name="birthday">Birthday</string>
     <string name="latestPost">Latest post</string>
+    <string name="postDate">Date:</string>
+    <string name="postLocation">Where it was taken:</string>
+    <string name="latestPostLocation">Post location...</string>
 </resources>
